# meridian-mcp-deploy

./: .gitignore  PUBLICATION_READY.md  README.md  pyproject.toml  setup.sh
demos/: advanced-usage.md  quick-start.md
docs/: README.md  api-reference.md  configuration.md
examples/: README.md  quickstart.md
manifests/: custom-server.yaml  filesystem-server.yaml  playwright-server.yaml
scripts/: mcp-deploy
src/: cli.py  docker_compose_generator.py  health_check.py  manifest_parser.py  manifest_schema.py
src/phase2/: PHASE1_DOCUMENTATION.md  README.md  dependency_resolver.py  mcp_connectivity_validator.py
tutorials/: deep-dive.md  getting-started-5-minutes.md
