[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-deploy"
version = "1.0.0"
description = "One-command deployment for MCP servers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Meridian"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.scripts]
mcp-deploy = "cli:main"

[project.urls]
Homepage = "https://github.com/meridian/mcp-deploy"
Documentation = "https://github.com/meridian/mcp-deploy#readme"
Repository = "https://github.com/meridian/mcp-deploy.git"
